# Steel-City-Restaurant-Challenge

./: .gitattributes  .gitignore  DEPLOY.md  LICENSE  README.md  Untitled  environment.yaml
configs/: config.yaml  fastdds_discovery_client.xml  fastdds_discovery_super_client.xml  oakd_voxel_layer.overlay.yaml  package-lock.json  slam.yaml  turtlebot_setup.bash  turtlebot_setup.bash.template  waypoints.yaml
docker/: .dockerignore  Dockerfile  entrypoint.sh  nav.env  run_container.sh  run_container_wsl.sh  run_docker.bash  save_docker.bash  start_competition_stack.sh
docs/: OPERATIONS.md  aif_architecture.md  aif_design.md  aif_game_phases.md  aif_ros_integration.md  database.md  demo_run.md  furniture_costmap.md  how_to_run.md  interfaces.md  llm_changes.md  navigation.md  report.md  run_without_docker.md  speech.md  task_manager.md  troubleshooting_dds_wsl.md  wsl_host_setup.md
docs/interfaces/: README.md
docs/speech/: README.md
docs/vision/: README.md
docs/webapp/: plan.md  restaurant-robocup-2026-firebase-adminsdk-fbsvc-2b44375b91.json
maps/: README.md  home.yaml  map_name.yaml  restaurant.pgm  restaurant.yaml
scripts/aif/: README.md  __init__.py  aif_coordinator.py  epistemic_test.py  evaluate.py  game_phases.py  game_phases_multi.py  generative_model.py  law_as_code.py  requirements.txt  test_e2e.py  test_ros_integration.py
scripts/compare/: compare.py  test_compare.py
scripts/database/: __init__.py  client.py  config.py  menu_catalog.py  models.py  repository.py  reset_demo.py  seed.py  test_connection.py  test_navigation_targets.py
scripts/helper/: ros_bridge.py  waypoint_recorder.py  waypoint_store.py
scripts/native/: deploy.sh  install_jazzy.sh  run_native.sh
scripts/nav/: activate_nav2.sh  apply_furniture_costmap.py  apply_nav2_competition.py  camera_utils.py  diagnose_camera.sh  fix_map_names.sh  launch_localization.sh  launch_nav2.sh  nav_ros_env.sh  normalize_waypoints.py  record_waypoints.py  run_record_waypoints.sh  stop_navigation_stack.sh  undock_robot.sh  view_camera.sh  waypoint_store.py
scripts/reactive_sim/: README.md  __init__.py  behaviors.py  coordinator.py  sim_state.py  test_reactive_sim.py
scripts/speech/: config.py  llm.py  main.py  order.py  stt.py  test_stt.py  test_tools.py  tools.py  tts.py
scripts/src/webapp/: .env.example  CLAUDE.md  eslint.config.mjs  export.js  firestore_export.txt  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/trial/: README.md  behavior_triggers.py  diagnose_nav2_goal.sh  kitchen_mark_ready.py  preflight_verify.sh  run_db_lifecycle.py  run_unit_tests.py  simulate_customer.py  validate_waypoints.py  verify_docker_nav.sh  verify_navigation.sh
scripts/vision/: order_verification.py  restaurant_vision.py  vision_competition.py
scripts/windows/: README.md  allow-robot-subnet.ps1  wslconfig.example
turtlebot4_ws/: README.md
turtlebot4_ws/src/turtlebot4_steel_city_competition/: CMakeLists.txt  README.md  package.xml
turtlebot4_ws/src/turtlebot4_steel_city_competition/launch/: competition_localization.launch.py  competition_nav2.launch.py  localization_competition_bringup.launch.py  navigation_competition.launch.py  navigation_server.launch.py  restaurant_bringup.launch.py  steel_city.launch.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/: aif_run.py  turtlebot4_run.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/actions/: __init__.py  llm_process.py  obj_detection.py  order.py  speech_to_text.py  text_to_speech.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/behaviors/: __init__.py  behaviors.py  check_customer_behavior.py  check_empty_table_behavior.py  collect_order_behavior.py  database_bridge.py  introduce_table_behavior.py  mark_order_ready_behavior.py  navigation_handoff.py  speech_utils.py  take_order_behavior.py  update_customer_number_behavior.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/helpers/: __init__.py  config.py  process_camera.py  retrieve_camera.py  retrieve_mic.py  send_audio.py  stt.py  tts.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/llm/: order_taker.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/navigation/: navigation_client.py  navigation_server.py  restaurant_navigator.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/publishers/: __init__.py  mic_audio_utils.py  mic_device.py  mic_publisher.py  mic_test.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/src/subscribers/: __init__.py  speaker_subscriber.py  speaker_test.py
turtlebot4_ws/src/turtlebot4_steel_city_competition/srv/: NavigateToWaypoint.srv
(+36 files in other folders)
